tests/fixtures/invalid/round_list_bytes.py
# Cannot call round() with List[int], Bytes
x = round([1, 2, 3], b"hello")
